# hybrid_search

./: .pre-commit-config.yaml  Dockerfile  Makefile  README.md  config.yaml  docker-compose.yml  pyproject.toml
.github/workflows/: ci_cd_hybrid_search.yml
app/: main.py  models.py  services.py
app/utils/: config_loader.py
data/: ground_truth.json  sample_documents.json
k8s/: fastapi-deployment.yaml
models/: lightgbm_reranker.pkl
scripts/: create_es_index.py  measure_metrics.py  train_reranker.py
tests/: test_services.py
